# argv

./: .gitignore  CMakeLists.txt  README.md
include/argv/: argv.h  help-output.h  option-flags.h  option.h  struct-names.h
src/: argv.c  cmd-args.h  cmd-option.h  help-output.c  option.c
test/: check-argv.c  check-argv.h  main.c  test-argv.c  test-argv.h  test-option.c  test-option.h
